--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "description": ".d.ts generator. Generates a single d.ts bundle containing external modules from TypeScript files.",
   "version": "0.0.1",
   "bugs": {
-    "url": "https://github.com/SitePen/dts-generator/issues"
+    "url": "https://github.com/novaalone/dts-generator/issues"
   },
   "license": "BSD-3-Clause",
   "repository": {
@@ -11,7 +11,7 @@
     "url": "git+https://github.com/novaalone/dts-generator.git"
   },
   "bin": {
-    "dts-generator": "bin/dts-generator"
+    "dts-gen": "bin/dts-generator"
   },
   "dependencies": {
     "bluebird": "3.3.3",
@@ -26,7 +26,6 @@
     "typescript": "^2.1.4"
   },
   "scripts": {
-    "prepublish": "tsc --module umd --target es5 --moduleResolution node typings/tsd.d.ts index.ts bin/dts-generator.ts",
     "test": "tests/run.sh"
   },
   "homepage": "https://github.com/novaalone/dts-generator#readme",
