--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "dts-gen-xx",
   "description": ".d.ts generator. Generates a single d.ts bundle containing external modules from TypeScript files.",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "bugs": {
     "url": "https://github.com/novaalone/dts-generator/issues"
   },
@@ -26,6 +26,7 @@
     "typescript": "^2.1.4"
   },
   "scripts": {
+    "prepublish": "tsc --module umd --target es5 --moduleResolution node typings/tsd.d.ts index.ts bin/dts-generator.ts",
     "test": "tests/run.sh"
   },
   "homepage": "https://github.com/novaalone/dts-generator#readme",
